2007-07-03  Jakub Jelinek  <jakub@redhat.com>

	[BZ #4702]
	* nis/nss-default.c: Include errno.h.
	(init): Preserve errno.

2007-07-02  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/bits/socket.h (PF_UNIX): Update comment.

2007-06-30  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/bits/socket.h: Add PF_RXRPC and AF_RXRPC.

2007-06-29  Martin Schwidefsky  <schwidefsky@de.ibm.com>

	* sysdeps/unix/sysv/linux/bits/socket.h: Add PF_IUCV and AF_IUCV.


2007-06-29  Martin Schwidefsky  <schwidefsky@de.ibm.com>

	* sysdeps/s390/dl-procinfo.c: New file.
	* sysdeps/s390/dl-procinfo.h: New file.
	* sysdeps/unix/sysv/linux/s390/dl-procinfo.h: New file.

2007-06-29  Jakub Jelinek  <jakub@redhat.com>

	* elf/dl-load.c (open_verify): Find .note.ABI-tag notes even
	in PT_NOTE segments with multiple notes.
	* elf/readelflib.c (process_elf_file): Likewise.

2007-06-22  Ulrich Drepper  <drepper@redhat.com>

	* nis/nis_domain_of.c (__nis_domain_of): Make the code a bit more
	ISO C compliant.

2007-06-19  Ulrich Drepper  <drepper@redhat.com>

	* elf/dl-close.c (free_mem): Free _dl_scope_free_list.

2007-06-13  Jakub Jelinek  <jakub@redhat.com>

	* include/link.h: Don't include rtld-lowlevel.h.
	(struct link_map): Remove l_scope_lock.
	* sysdeps/generic/ldsodefs.h: Don't include rtld-lowlevel.h.
	(_dl_scope_free_list): New field (variable) in _rtld_global.
	(DL_LOOKUP_SCOPE_LOCK): Remove.
	(_dl_scope_free): New prototype.
	* elf/dl-runtime.c (_dl_fixup): Don't use __rtld_mrlock_*lock.
	Don't pass DL_LOOKUP_SCOPE_LOCK to _dl_lookup_symbol_x.
	(_dl_profile_fixup): Likewise.
	* elf/dl-sym.c (do_sym): Likewise.  Use wrapped _dl_lookup_symbol_x
	whenever !RTLD_SINGLE_THREAD_P, use THREAD_GSCOPE_SET_FLAG and
	THREAD_GSCOPE_RESET_FLAG around it.
	* elf/dl-close.c (_dl_close_worker): Don't use
	__rtld_mrlock_{change,done}.  Call _dl_scope_free on the old
	scope.  Make sure THREAD_GSCOPE_WAIT () happens if any old